--- a/requirements.txt
+++ b/requirements.txt
@@ -1,75 +1,6 @@
-alembic==1.10.2
-aniso8601==9.0.1
-appdirs==1.4.4
-audioread==3.0.0
-brotlipy==0.7.0
-click==8.1.3
-contourpy==1.0.7
-cycler==0.11.0
-Cython==0.29.34
-dnspython==2.3.0
-email-validator==2.0.0.post2
-fastapi==0.95.2
-fastapi-utils==0.2.1
-Flask==2.2.3
-Flask-Cors==3.0.10
-flask-marshmallow==0.14.0
-Flask-Migrate==4.0.4
-flask-oidc==1.4.0
-Flask-RESTful==0.3.9
-Flask-SQLAlchemy==2.3.2
-fonttools==4.38.0
-gunicorn==20.1.0
-h11==0.14.0
-httpcore==0.17.2
-httplib2==0.22.0
-httptools==0.5.0
-httpx==0.24.1
-itsdangerous==2.1.2
-Jinja2==3.1.2
-joblib==1.2.0
-kiwisolver==1.4.4
-librosa==0.9.2
-llvmlite==0.39.1
-Mako==1.2.4
-marshmallow==3.19.0
-matplotlib==3.6.3
-numba==0.56.4
-numpy==1.23.5
-oauth2client==4.1.3
-okta==0.0.4
-opt-einsum==3.3.0
-orjson==3.8.14
-pandas==1.5.3
-patsy==0.5.3
-Pillow==9.4.0
-ply==3.11
-pmdarima==2.0.3
-pooch==1.6.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
+email_validator==2.0.0.post2
+fastapi==0.98.0
+fastapi_utils==0.2.1
 pydantic==1.10.8
-PyMySQL==1.0.3
-pyparsing==3.0.9
-PyQt5-sip==12.11.0
-pyro-api==0.1.2
-pyro-ppl==1.8.4
-python-dotenv==1.0.0
-python-multipart==0.0.6
-python-slugify==1.2.5
-PyYAML==6.0
-resampy==0.4.2
-rsa==4.9
-soundfile==0.11.0
 SQLAlchemy==1.4.48
-starlette==0.27.0
-statsmodels==0.13.5
-threadpoolctl==3.1.0
-ujson==5.7.0
-Unidecode==1.3.6
 uvicorn==0.22.0
-uvloop==0.17.0
-watchfiles==0.19.0
-webencodings==0.5.1
-websockets==11.0.3
-Werkzeug==2.2.3
